fix: menu items alignement

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -219,6 +219,13 @@ footer {
 
 	li {
 		list-style-type: none;
+		text-align: left;
+		padding-left: 1.5rem;
+		text-indent: -1.5rem;
+	}
+
+	section {
+		margin: 0;
 	}
 }
 
